@@ -4,6 +4,7 @@ New features:
 ........S. [ZBX-12258] added bulk selections to improve performance in processing of escalations (Sergejs)
 
 Bug fixes:
+.......PS. [ZBX-12493] fixed address and ports array size in zbx_init_ipmi_host() to match OpenIPMI internals (Andris, vso)
 ..F....... [ZBX-12623] fixed label macro resolving in maps (vjaceslavs)
 ..F.....S. [ZBX-11042] allowed libcurl to choose SMTP authentication mechanism other than PLAIN (gleb, vjaceslavs)
 ..F....... [ZBX-8997] fixed trigger expression validation test form (gcalenko, Sasha)
@@ -480,6 +481,7 @@ Changes for 3.0.11rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-12493] fixed address and ports array size in zbx_init_ipmi_host() to match OpenIPMI internals (Andris, vso)
 ..F....... [ZBX-12623] fixed label macro resolving in maps (vjaceslavs)
 ..F.....S. [ZBX-11042] allowed libcurl to choose SMTP authentication mechanism other than PLAIN (gleb, vjaceslavs)
 ..F....... [ZBX-8997] fixed trigger expression validation test form (gcalenko, Sasha)
@@ -2210,6 +2212,7 @@ Changes for 2.2.20rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-12493] fixed address and ports array size in zbx_init_ipmi_host() to match OpenIPMI internals (Andris, vso)
 ........S. [ZBX-12446] fixed discovery and auto registration to accept empty DNS names (vso)
 ...G...... [ZBX-12270] fixed processing of AIX item 'system.stat[ent]' in agent; thanks to Marc for patch (Andris)
 
